# tsp-solver

./: .gitignore  README.md  baseline_results_long.txt  import_log.txt  import_verbose.txt  notes.md  pyproject.toml  run_benchmarks.py  test_refactor.py  trials.md
.cache/: hk_bounds.json
data/: best_tour.csv  lower_bound.txt  sample_10000_hk.npy  sample_10000_pi.npy  sample_1000_hk.npy  sample_1000_pi.npy  sample_100_hk.npy  sample_100_pi.npy  sample_115475_hk.npy  sample_115475_pi.npy  sample_2000_hk.npy  sample_2000_pi.npy  sample_200_hk.npy  sample_200_pi.npy  sample_5000_hk.npy  sample_5000_pi.npy  sample_500_hk.npy  sample_500_pi.npy  sample_50_hk.npy  sample_50_pi.npy  sample_bench_1000_hk.npy  sample_bench_1000_pi.npy  sample_bench_100_hk.npy  sample_bench_100_pi.npy  sample_bench_5000_hk.npy  sample_bench_5000_pi.npy  sample_bench_500_hk.npy  sample_bench_500_pi.npy  sample_bench_50_hk.npy  sample_bench_50_pi.npy  sample_lower_bound.txt  solution.txt  solutions.csv
doc/: analysis_results.md  archive_notes.md  archive_trials.md  detailed-design.md  high-level-design.md  implementation_plan.md  prompt.md  proposal.md  resume_prompt.md
doc/tasks/: advanced-lkh.md  advanced-optimization.md  backbone-consensus.md  cascading-kopt-validation.md  config.md  data-io.md  debug-freezing.md  final-validation-subtask1.md  final-validation.md  full-cascading-kopt.md  full-scale-optimization.md  kopt-engine.md  lkh-core.md  main.md  orchestration.md  preprocessing.md  progress.md  scaling-validation.md  seed-generation.md  validation.md
scratch/: analyze_long_run.py  analyze_long_run_detailed.py  analyze_results.py  check_length_diff.py  debug_bench.py  debug_import.py  debug_or_opt.py  definitive_grid.py  definitive_grid_parallel.py  definitive_grid_parallel_v3.py  definitive_trends.csv  definitive_trends_parallel.csv  definitive_trends_v3.csv  diff_kopt.diff  full_factorial.py  full_factorial_n5000.csv  full_factorial_v2.csv  full_factorial_v2.py  grid_search.py  grid_search_expanded_n5000.py  grid_search_hr_n5000.py  grid_search_hr_n5000_v2.py  grid_search_n5000.py  hr_grid_n5000_v2.csv  k_grid_results_raw.csv  k_grid_search.py  kopt_engine_16fe617.py  long_run_strategy.csv  read_log.py  read_step_thinking.py  results.txt  run_adv_trials.py  run_experiments.py  run_soft_backbone.py  run_trials.py  scaling_trends.csv  scaling_trends.py  seeding_strategy.csv  test_4opt_broken.py  test_cascade_4opt.py  (+7 more)
src/: __init__.py  config.py
src/core/: __init__.py  backbone.py  kopt_engine.py  lkh_core.py  orchestration.py  preprocessing.py  seed_generation.py  validation.py
src/scripts/: __init__.py  benchmark.py  benchmark_preprocessing.py  compute_hk.py  compute_lower_bound.py  debug_bench.py  experiment_runner.py  full_scale_bench.py  inspect_jit.py  long_run_experiment.py  main.py  run_sample.py
src/utils/: __init__.py  data_io.py  memory_utils.py  persistence.py  time_utils.py
tests/: __init__.py  conftest.py  test_advanced_features.py  test_backbone.py  test_config.py  test_data_io.py  test_data_io_extended.py  test_io_robustness.py  test_kopt_engine.py  test_lkh_core.py  test_orchestration.py  test_preprocessing.py  test_seed_generation.py  test_validation.py
tests/data/: sample_cities.csv
