[project]
name = "tsp-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=2.1.0",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
    "scipy>=1.17.1",
]

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "numba.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Trailing comma missing (conflicts with formatter)
    "ISC001", # Single line implicit string concatenation (conflicts with formatter)
    "PGH003", # Use specific rule codes when ignoring type issues (too many type: ignores for numba)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # Use of `assert` detected
    "PLR2004", # Magic value used in comparison
    "D103", # Missing docstring in public function
    "ANN201", # Missing return type annotation for public function
    "ANN001", # Missing type annotation for function argument
    "NPY002", # Replace legacy `np.random` calls
    "PLC0415", # Import should be at the top-level of a file
    "PTH", # Use Pathlib
    "S110", # `try`-`except`-`pass` detected
    "BLE001", # Do not catch blind exception
    "ANN401", # Dynamically typed expressions (Any) disallowed
    "ERA001", # Found commented-out code
]
"src/core/kopt_engine.py" = [
    "C901", # Too complex
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "N806", # Variable in function should be lowercase (L3 used for segment length)
    "S101", # Use of `assert` detected
    "PLR2004", # Magic value used in comparison
]
"src/core/validation.py" = [
    "C901", # Too complex
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
]
"src/core/orchestration.py" = [
    "C901", # Too complex
    "PLR0913", # Too many arguments
]
"src/core/preprocessing.py" = [
    "C901", # Too complex
    "PLR0912", # Too many branches
]
"src/scripts/main.py" = [
    "C901", # Too complex
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "S101", # Use of `assert` detected
]
"src/utils/memory_utils.py" = [
    "S101", # Use of `assert` detected
]
"src/scripts/run_sample.py" = [
    "PLR0913", # Too many arguments
    "C901", # Too complex
    "PLR0915", # Too many statements
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers --strict-config -ra"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "scipy-stubs>=1.17.1.5",
]

