[project]
name = "tsp-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
]
[tool.mypy]
strict = false
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numba.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Trailing comma missing (conflicts with formatter)
    "ISC001", # Single line implicit string concatenation (conflicts with formatter)
    "PGH003", # Use specific rule codes when ignoring type issues (too many type: ignores for numba)
    "E501",    # Line too long (keep manual unrolling for performance)
    "E701",    # Multiple statements on one line (used for compact logic)
    "PLR2004", # Magic value used in comparison
    "PLR0912", # Too many branches (orchestration and engines need many cases)
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "ANN401",  # Dynamically typed expressions (Any)
    "T201",    # print found (we use print for CLI feedback)
    "FBT003",  # Boolean positional value in function call
    "TRY003",  # Avoid specifying long messages outside the exception class
    "EM101",   # Exception must not use a string literal
    "SLF001",  # Private member accessed
    "NPY002",  # Replace legacy `np.random` calls (Numba prefers legacy random)
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # Use of `assert` detected
    "D103", # Missing docstring in public function
    "ANN201", # Missing return type annotation for public function
    "ANN001", # Missing type annotation for function argument
    "PLC0415", # Import should be at the top-level of a file
    "PTH", # Use Pathlib
    "S110", # `try`-`except`-`pass` detected
    "BLE001", # Do not catch blind exception
    "ERA001", # Found commented-out code
]
"src/core/kopt_engine.py" = [
    "C901", # Too complex
    "N806", # Variable in function should be lowercase (L3 used for segment length)
    "S101", # Use of `assert` detected
]
"src/core/validation.py" = [
    "C901", # Too complex
]
"src/core/orchestration.py" = [
    "C901", # Too complex
]
"src/core/preprocessing.py" = [
    "C901", # Too complex
]
"src/scripts/main.py" = [
    "C901", # Too complex
    "S101", # Use of `assert` detected
]
"src/utils/memory_utils.py" = [
    "S101", # Use of `assert` detected
]
"src/scripts/run_sample.py" = [
    "C901", # Too complex
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers --strict-config -ra"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
    "pyright>=1.1.409",
    "scipy-stubs>=1.17.1.5",
]
